--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -126,9 +126,10 @@
 	</div>
 	<div class="span2 offset6">
 		<div class="socialmedia">
-			<h6 style="position:relative; top: 7px;">Join Us</h6>
+			<h6 style="position:relative; top: 8px;">Join Us</h6>
 			<%= link_to image_tag('facebook.jpg'), 'http://www.facebook.com' %>			
-			<%= link_to image_tag('twitter.jpg'), 'http://www.twitter.com' %>			
+			<%= link_to image_tag('twitter.jpg'), 'http://www.twitter.com' %>
+			<a href="http://www.google.com"><h6 style="display:inline-block; position:relative; top:7px;">More</h6></a>		
 		</div>
 	</div>
 </div>
