--- a/app/views/static_pages/bonding.html.erb
+++ b/app/views/static_pages/bonding.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Dream Smile Solutions</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -6,7 +13,7 @@
 				<br>For more than a quarter of a century our calling card has been “We cater to dental cowards” and over this time our founder, Dr. Rothenberg, has set the Syracuse benchmark for gentle dentistry. Today, TLC draws on an array of resources to assure your dental comfort.
 			</p>
 			<%= image_tag 'bonding.jpg', :class => "float-right" %>	
-			<b>Bonding</b>
+			<h6><b>Bonding</b></h6>
 			<ul>
 				<li>Fixes stained or discolored teeth</li>
 				<li>Fixes chipped or broken teeth</li>
