--- a/app/views/static_pages/bridges.html.erb
+++ b/app/views/static_pages/bridges.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Dream Smile Solutions</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -6,7 +13,7 @@
 				A bridge is a device that replaces a missing tooth or teeth and is either fixed (permanently attached) or removable (see a removable partial denture).  A common type of bridge is made by creating crowns for the teeth abutting the open space left by a lost tooth, attaching a false tooth to the two crowns to fill the open space between them, and then permanently emplacing the two crowns that secure the bridge.
 			</p>
 			<%= image_tag 'bridges.jpg', :class => "float-right" %>	
-			<b>Bridges </b>
+			<h6><b>Bridges</b></h6>
 			<ul>
 				<li>Replace a missing tooth or teeth</li>
 				<li>Greatly reduce the risk of gum disease caused by missing teeth</li>
