--- a/app/views/static_pages/brokendentures.html.erb
+++ b/app/views/static_pages/brokendentures.html.erb
@@ -1,6 +1,6 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
-		<div class="contact-container">
+		<div class="contact-container" style="padding-bottom:10px;">
 			<h3>Broken or Ill Fitting Dentures</h3>
 			<%= image_tag 'wisdomtooth.jpg', :class => "float-right" %>	
 			<p>
