--- a/app/views/static_pages/cleaning.html.erb
+++ b/app/views/static_pages/cleaning.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Dream Smile Solutions</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -5,7 +12,7 @@
 			<p>
 				A Professional Dental Cleaning or “Recare” is a comfortable, biannual or, if needed, more frequent procedure that lasts approximately one hour and is performed by our highly skilled and experienced hygienists. It is an essential part of achieving and maintaining your “Dream Smile” and is comprised of the following services:  
 			</p>
-			<b>Diagnostic</b>
+			<h6><b>Diagnostic</b></h6>
 			<ul>
 				<li>Review and update medical history including changes in medical condition, medications and therapeutic treatments</li>
 				<li>Check blood pressure</li>
@@ -19,7 +26,7 @@
 				<li>Refer patients to specialists for certain treatments</li>
 			</ul>
 			<%= image_tag 'recaretooth.jpg', :class => "float-right" %>	
-			<b>Preventive</b>
+			<h6><b>Preventive</b></h6>
 			<ul>
 				<li>Remove dental plaque and tartar</li>
 				<li>Provide periodontal pocket treatments</li>
@@ -27,12 +34,12 @@
 				<li>Provide sealant treatments</li>
 				<li>Provide Rotadent toothbrush introduction and instruction</li>
 			</ul>
-			<b>Aesthetic</b>
+			<h6><b>Aesthetic</b></h6>
 			<ul>
 				<li>Remove dental stains</li>
 				<li>Polish fillings and crowns</li>
 			</ul>
-			<b>Educational</b>
+			<h6><b>Educational</b></h6>
 			<ul>
 				<li>Provide oral hygiene instruction</li>
 				<li>Provide nutritional counseling</li>
