--- a/app/views/static_pages/contouring.html.erb
+++ b/app/views/static_pages/contouring.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Dream Smile Solutions</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -6,7 +13,7 @@
 				Dental contouring is twofold.  Tooth Contouring is a quick and comfortable procedure to improve the shape, length, and surface of teeth.  Gum contouring is a complementary procedure to reshape your gums for healthy dental support and a radiant smile.
 			</p>
 			<%= image_tag 'contouring.jpg', :class => "float-right" %>	
-			<b>Contouring</b>
+			<h6><b>Contouring</b></h6>
 			<ul>
 				<li>Fixes small chips in teeth</li>
 				<li>Smoothes out bulges or pits in tooth enamel</li>
