--- a/app/views/static_pages/dentures.html.erb
+++ b/app/views/static_pages/dentures.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Dream Smile Solutions</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -6,7 +13,7 @@
 				A denture is a removable replacement for missing teeth and their surrounding tissues.  There are two principal types of denture. A “Full or Complete Denture” is used when all teeth are missing in the upper and/or lower dental arches and a “Partial Denture” is used when only some teeth are missin. Additionally, an “immediate” full denture may be placed on the gums of a newly extracted teeth and subsequently relined after the gums have healed. Alternately, if a patient’s gums have already healed from tooth loss, a “conventional” full denture may permanently be emplaced. Once properly prepared and fitted, full and partial dentures improve oral health and appearance while projecting a natural look and welcome smile. 
 			</p>
 			<%= image_tag 'denture.jpg', :class => "float-right" %>	
-			<b>Dentures </b>
+			<h6><b>Dentures</b></h6>
 			<ul>
 				<li>Replace some or all missing teeth</li>
 				<li>Greatly reduce the risk of gum disease caused by missing teeth</li>
