--- a/app/views/static_pages/fillings.html.erb
+++ b/app/views/static_pages/fillings.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Dream Smile Solutions</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -6,7 +13,7 @@
 				A filling is dental restorative material used to restore a tooth with structural loss to its normal condition in health, function, and appearance.  
 			</p>
 			<%= image_tag 'filling.jpg', :class => "float-right" %>	
-			<b>Fillings</b>
+			<h6><b>Fillings</b></h6>
 			<ul>
 				<li>Remove tooth decay</li>
 				<li>Deter future tooth decay</li>
