--- a/app/views/static_pages/veneers.html.erb
+++ b/app/views/static_pages/veneers.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Dream Smile Solutions</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -6,7 +13,7 @@
 				Veneers are ultra-thin shells of porcelain that are bonded to the front surface of teeth to dramatically improve dental appearance.  They are a simple, comfortable, and popular way to cover imperfections and achieve a radiant smile.<br>
 			</p>
 			<%= image_tag 'veneer.jpg', :class => "float-right" %>	
-			<b>Veneers</b>
+			<h6><b>Veneers</b></h6>
 			<ul>
 				<li>Fix stained or discolored teeth</li>
 				<li>Provide a stain resistant tooth surface</li>
