--- a/app/views/static_pages/whitening.html.erb
+++ b/app/views/static_pages/whitening.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Dream Smile Solutions</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -5,8 +12,8 @@
 			<p>
 				Patients call our professional tooth whitening “dental magic” for safely, comfortably, and quickly transforming stained and discolored teeth into a dazzling smile.
 			</p>
-			<%= image_tag 'veneer.jpg', :class => "float-right" %>	
-			<b>Whitening</b>
+			<%= image_tag 'whitening.jpg', :class => "float-right" %>	
+			<h6><b>Whitening</b></h6>
 			<ul>
 				<li>Removes stains from drinking coffee, tea, colas, and red wine</li>
 				<li>Removes stains from eating pigmented food such as cherries and blueberries</li>
@@ -16,12 +23,12 @@
 				<li>Brightens dull colored teeth</li>
 				<li>Creates your “Dream Smile”</li>
 			</ul>
-			<b>Whitening Procedure</b><br>
+			<h6><b>Whitening Procedure</b></h6>
 			<p>
 				TLC professional tooth whitening is either directly supervised with the Polus Whitening Accelerator or indirectly supervised with custom-fitted whitening trays. In both approaches the first step is a thorough examination of your teeth and gums to determine their suitability for whitening and an appropriate method for treating surface (extrinsic) and interior (intrinsic) stains.
 			</p>	
 			<%= image_tag 'poluswhitener.jpg', :class => "float-right" %>	
-			<b>Whitening with the Polus Whitening Accelerator </b><br>
+			<h6><b>Whitening with the Polus Whitening Accelerator </b></h6>
 			<p>
 				If the examination is favorable for whitening, we roll out the Polus Whitening Accelerator by Beyond Dental, the ultimate in tooth whitening technology.  Its distinctive LightBridge system combines halogen and LED light sources for superior whitening power while advanced filtration ensures your safety by removing all harmful heat and ultraviolet output.  Three flexible settings tailor the treatment to your tooth sensitivity level and a detachable LED curing light enables spot whitening of a single tooth.<br>
 			</p>
@@ -29,10 +36,10 @@
 				A Polus Whitening Treatment consists of three safe and successive 10 minute sessions.  It begins with a hygienic cleaning and polishing of your teeth. This is followed by setting the Polus for your tooth sensitivity level, securing your gum and lip tissue with a protective gel, and then applying a specially formulated whitening gel to your teeth that is activated by the Polus LightBridge system. After each of the first two sessions we remove and then reapply the whitening gell.  We monitor your three 10 minute sessions while you relax and watch a selection of your choice on a Pansonic HDTV and while your stains and discoloration dissolve into a “Dream Smile”.  
 			</p>												
 			<p>
-				<b>Custom-Fitted Tray Activated Whitening</b><br>
+				<b>Custom-Fitted Tray Activated Whitening</b>
 				If the examination is favorable for whitening and you prefer indirectly supervised whitening, we begin with a hygienic cleaning and polishing of your teeth.  This is followed by taking a detailed impression of your teeth to create individualized, custom-fitted trays for your upper and lower teeth.  We then give you the personalized trays, properly formulated whitening gel, and detailed treatment instructions for two hour daily or nightly applications during a period of about two weeks.  At the end of this period, you will have a bright and shining smile.
 			</p>
-			<b>TLC Whitening vs. Drugstore Whitening</b><br>
+			<h6><b>TLC Whitening vs. Drugstore Whitening</b></h6>
 			<p>
 				Drugstore and supermarket shelves hold an array of tooth whitening products in the form of toothpastes, strips, pens, rinses, and kits.  They far surpass us in marketing.  We far surpass them in bright and healthy smiles.
 			</p>
