--- a/app/views/static_pages/wisdomteeth.html.erb
+++ b/app/views/static_pages/wisdomteeth.html.erb
@@ -19,12 +19,12 @@
 			<ul>
 				<li>Pain or jaw stiffness near an impacted wisdom tooth</li>
 				<li>Ear pain</li>
-				<li>Pain or irritation from a wisdom tooth coming in at an awkward angle and rubbing against your cheek, tongue, or top of the mouth<li>
+				<li>Pain or irritation from a wisdom tooth coming in at an awkward angle and rubbing against your cheek, tongue, or top of the mouth</li>
 				<li>Tooth decay or gum disease caused by difficult access for proper cleaning</li>
 				<li>Crowding of other teeth by a wisdom tooth</li>
+				<%= image_tag "wisdomtooth.jpg", :class => "float-right" %>
 				<li>Damage to adjacent teeth</li>
 			</ul>
-			<%= image_tag "wisdomtooth.jpg", :class => "float-right" %>
 			<p>
 				Should you experience any of these symptoms, it is important that you promptly seek treatment from TLC Dental. We will take a detailed digital scan of your teeth and gums to establish the nature and extent of your wisdom teeth complications and determine whether extraction would be the most appropriate treatment.  If our examination is affirmative, we would provide for the above procedure and thereby alleviate your dental discomfort and assure your dental health.<br>
 			</p>
