--- a/app/views/static_pages/crowns.html.erb
+++ b/app/views/static_pages/crowns.html.erb
@@ -1,3 +1,10 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Dream Smile Solutions</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
@@ -6,7 +13,7 @@
 				A crown or cap is a complete and permanent cover for a damaged tooth or an implant that it strengthens and protects. A crown also supports the surrounding teeth, preserves proper “bite,” and projects a healthy and radiant appearance.
 			</p>
 			<%= image_tag 'crown.jpg', :class => "float-right" %>	
-			<b>Crowns</b>
+			<h6><b>Crowns</b></h6>
 			<ul>
 				<li>Replace a large, deteriorated filling when there is little remaining tooth structure</li>
 				<li>Restore a fractured tooth</li>
