--- a/app/views/static_pages/snaponsmile.html.erb
+++ b/app/views/static_pages/snaponsmile.html.erb
@@ -1,7 +1,14 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>Dream Smile Solutions</u>
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>TLC Snap-On Smile</h3> <h4>A perfect smile <br> & <br> A dream come true</h4> 
+			<h3>TLC Snap-On-Smile</h3> <h4>A perfect smile <br> & <br> A dream come true</h4> 
 			<b>Those Special Moments</b>
 			<p>
 				Are there moments when you dream of a perfect smile but don’t have the time or funds for a complete dental makeover?<br>
@@ -20,7 +27,7 @@
 				The TLC Snap-On Smile was designed by a renowned dentist after years of research and development to give you perfect teeth with which to eat, drink, talk, laugh, and smile normally.  Although very thin and lightweight, it is also remarkably strong.  It fits snuggly over your teeth like a glove and is easy to snap on and off.
 			</p>
 			<%= image_tag 'snaponsmile.jpg', :class => "float-right" %>	
-			<b>TLC Snap-On Smile</b>
+			<h6><b>TLC Snap-On Smile</b></h6>
 			<ul>
 				<li>Crooked teeth</li>
 				<li>Gaps between teeth</li>
