formatted staff columns

--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -248,11 +248,11 @@
 			<h3>The TLC Tooth Fairy</h3>
 			<table>
 				<tr>	
-					<td rowspan="14">
+					<td rowspan="14" class="imagecolumn">
 						<%= image_tag 'toothfairy.jpg' %>
 					</td>
-					<td>Birthplace:</td>
-					<td>Fairyland</td>
+					<td class="leftcolumn">Birthplace:</td>
+					<td class="rightcolumn">Fairyland</td>
 				</tr>		
 				<tr>
 					<td>Mother:</td>
@@ -316,11 +316,11 @@
 			<h3>The Mighty Molar</h3>
 			<table>
 				<tr>	
-					<td rowspan="12">
+					<td rowspan="12" class="imagecolumn">
 						<%= image_tag 'mightymolar.jpg' %>
 					</td>
-					<td>Birthplace:</td>
-					<td>Gumville</td>
+					<td class="leftcolumn">Birthplace:</td>
+					<td class="rightcolumn">Gumville</td>
 				</tr>		
 				<tr>
 					<td>Brothers:</td>
@@ -377,11 +377,11 @@
 			<table>
 
 				<tr>
-					<td rowspan="11">
+					<td rowspan="11" class="imagecolumn">
 						<%= image_tag 'flossy.jpg' %>
 					</td>
-					<td>Birthplace:</td>
-					<td>Frank Baum Kennels in Chittenango. Toto VII was my best friend there</td>
+					<td class="leftcolumn">Birthplace:</td>
+					<td class="rightcolumn">Frank Baum Kennels in Chittenango. Toto VII was my best friend there</td>
 				</tr>		
 				<tr>
 					<td>Realatives:</td>
