--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -259,6 +259,18 @@ td {
   margin-top: 40px;
 }
 
+.imagecolumn {
+  width: 200px;
+}
+
+.rightcolumn {
+  width: 250px;
+}
+
+.leftcolumn {
+  width: 170px;
+}
+
 .centered {
   text-align: center;
   margin-top: 20px;
