home page and staff revisions

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -21,9 +21,9 @@
 <div class="welcome-text">
 	<div class="row-fluid">
 		<div class="span12">
-			<h5>
+			<h5><i>
 				We at TLC warmly welcome you to<br>
-				our family of staff and patients.
+				our family of staff and patients.</i>
 			</h5><br>
 			<%=	image_tag 'homepage-signature.jpg' %>
 		</div>
