--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -34,7 +34,7 @@
 						Together with his wife Marsha, Dr. Rothenberg supports many local groups and organizations including Symphony Syracuse, the Everson Museum, the Syracuse Stage, and the Rosamond Gifford Zoo. They also enjoy the theatrical, musical, and athletic performances of their family of patients.<br>
 					</p>
 					<p>
-						To complement his life of work and family, Dr. Rothenberg pursues several avocations.  Art has been a gift and passion from early age and is manifest in the “toothbrush mailbox” of his design, in the murals that grace the walls of his home, and especially in the "Dream Smiles" that define his patients. .He also has long been an advocate of physical fitness and body building.  In all, Dr. Rothenberg's life has been one of caring for his family, his community, and particularly his patients.<br>
+						Most notably, Dr. Rothenberg is devoted to his wife and to their daughters Delilah and Tiffany who return regularly to the family fold. To complement his life of work and family, Dr. Rothenberg pursues several avocations.  Art has been a gift and passion from early age and is manifest in the “toothbrush mailbox” of his design, in the murals that grace the walls of his home, and especially in the "Dream Smiles" that define his patients. .He also has long been an advocate of physical fitness and body building.  In all, Dr. Rothenberg's life has been one of caring for his family, his community, and particularly his patients.<br>
 					</p>
 					<%= image_tag 'drrothenburg.jpg', :class => "float-left" %>
 					<p id="rothenburg">
