--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -140,7 +140,8 @@
 				<h5> Our Website Family </h5>
 				<p>
 					Rothenberg DDS/TLC Dental Group; Dr. Stephen J. Rothenberg, DDS; Dr. Richard Brinker DDS; Route 92, 7197 Highbridge Road, Fayetteville, NY 13066 315-637-7684<br>
-					A full service family dental practice serving Greater Syracuse.
+					A full service family dental practice serving Greater Syracuse.<br>
+					TLC thanks our artist Dan Blaushild and our website creator Eric Filkins @TLC Dental Group
 				</p>
 			</div>
 		</div>
