--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -127,7 +127,7 @@
 	<div class="span2 offset6">
 		<div class="socialmedia">
 			<h6 style="position:relative; top: 8px;">Join Us</h6>
-			<%= link_to image_tag('facebook.jpg'), 'http://www.facebook.com' %>			
+			<%= image_tag('facebook.jpg') %>			
 			<%= link_to image_tag('twitter.jpg'), 'http://www.twitter.com' %>
 			<a href="http://www.google.com"><h6 style="display:inline-block; position:relative; top:7px;">More</h6></a>		
 		</div>
@@ -136,11 +136,9 @@
 	<%= yield %>
 	<div class="footer">
 		<div class="row-fluid">
-			<div class="span12">
+			<div class="span10 offset1">
 				<p>
-					Rothenberg DDS/TLC Dental Group; Dr. Stephen J. Rothenberg, DDS; Dr. Richard Brinker DDS; Route 92, 7197 Highbridge Road, Fayetteville, NY 13066 315-637-7684<br>
-					A full service family dental practice serving Greater Syracuse.<br>
-					TLC thanks our artist Dan Blaushild and our website creator Eric Filkins @TLC Dental Group
+					Rothenberg DDS/TLC Dental Group, Route 92, 7197 Highbridge Road, Fayetteville, NY 13066, 315-637-7684.  TLC Dental Group is a full service family dental practice serving Greater Syracuse.  We thank our artist Dan Blaudhild and our website creator Eric Filkins.  
 				</p>
 			</div>
 		</div>
