--- a/app/views/static_pages/gentledentistry.html.erb
+++ b/app/views/static_pages/gentledentistry.html.erb
@@ -8,13 +8,13 @@
 
 <div class="row-fluid">
 	<div class="span8 offset2">
-		<div class="content-container-first">
+		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span8">			
+				<div class="span6">			
 					<h3>The Art of Gentle Dentistry</h3>
 				</div>
- 				<div class="span4">
- 					<%= image_tag 'cowardlylion.jpg', :class => "float-right" %>
+ 				<div class="span6">
+ 					<%= image_tag 'cowardlylion.jpg' %>
  				</div>				
 			</div>
 			<p>
@@ -23,7 +23,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span8 offset2">
 		<div class="content-container">
@@ -38,7 +37,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span8 offset2">
 		<div class="content-container">
@@ -53,15 +51,14 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span8">			
+				<div class="span6">			
 					<h3>Comforting Amenities</h3>
 				</div>
-				<div class="span4">
+				<div class="span6">
 					<%= image_tag 'comfortingamenities.jpg' %>
 				</div>
 			</div>
@@ -71,15 +68,14 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span8">			
+				<div class="span5">			
 					<h3>Comforting Canine</h3>
 				</div>
-				<div class="span4">
+				<div class="span7">
 					<%= image_tag 'gentle_flossy.jpg' %>
 				</div>
 			</div>
@@ -89,15 +85,14 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span8">			
+				<div class="span6">			
 					<h3>Comforting Anesthetics</h3>
 				</div>
-				<div class="span4">
+				<div class="span6">
 					<%= image_tag 'flowers.jpg' %>
 				</div>
 			</div>
@@ -107,15 +102,14 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span8">			
+				<div class="span5">			
 					<h3>Comforting Sedation</h3>
 				</div>
-				<div class="span4">
+				<div class="span7">
 					<%= image_tag 'sedation.jpg' %>
 				</div>
 			</div>
@@ -125,15 +119,14 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span8">			
+				<div class="span6">			
 					<h3>Comforting Commitment</h3>
 				</div>
-				<div class="span4">
+				<div class="span6">
 					<%= image_tag 'beach.jpg' %>
 				</div>
 			</div>
