--- a/app/views/static_pages/greendentistry.html.erb
+++ b/app/views/static_pages/greendentistry.html.erb
@@ -1,7 +1,7 @@
 <div class="green-pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
-			Green Dentistry
+			<i><u>Green Dentistry</u></i>
 		</div>
 	</div>
 </div>
